<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_register_two_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.RegisterActivity">

    <include
        android:id="@+id/ly_register_bar"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Food-Fans"
            android:textSize="32dp"
            android:layout_marginTop="50dp"
            android:textStyle="italic">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp" >
                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackk"
                    android:paddingStart="60dp"
                    android:paddingBottom="18dp"
                    android:hint="@string/register_account_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minLines="1"
                    android:focusable="true">
                </EditText>
                <ImageView
                    android:id="@+id/iv_register_account_icon"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_login_username" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp" >
                <EditText
                    android:id="@+id/et_register_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackk"
                    android:paddingStart="60dp"
                    android:paddingBottom="18dp"
                    android:hint="@string/register_verification"
                    android:minLines="1"
                    android:maxLength="6"
                    android:focusable="true">
                </EditText>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/iv_register_sms_icon"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@null"
                        app:srcCompat="@mipmap/ic_signup_sms" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="150dp"
                        android:paddingBottom="18dp"
                        android:background="@color/black1" />

                    <TextView
                        android:id="@+id/vertifyView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:alpha="0.4"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:paddingLeft="6dp"
                        android:paddingTop="4dp"
                        android:paddingRight="6dp"
                        android:paddingBottom="4dp"
                        android:text="@string/register_sms_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/blackk"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp" >
                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackk"
                    android:paddingStart="60dp"
                    android:paddingBottom="18dp"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"
                    android:minLines="1"
                    android:maxLength="12"
                    android:focusable="true">
                </EditText>
                <ImageView
                    android:id="@+id/iv_register_pwd_icon"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_login_password" />
            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp" >
                <EditText
                    android:id="@+id/et_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackk"
                    android:inputType="textPassword"
                    android:paddingStart="60dp"
                    android:paddingBottom="18dp"
                    android:hint="@string/register_confirm_password"
                    android:minLines="1"
                    android:maxLength="12"
                    android:focusable="true">
                </EditText>
                <ImageView
                    android:id="@+id/iv_register_confirm_pwd_icon"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_login_password" />
            </RelativeLayout>

        </LinearLayout>


    <Button
        android:id="@+id/bt_register_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/register_hint"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:translationZ="0dp"
        tools:targetApi="lollipop" />
    </LinearLayout>

</LinearLayout>